--- a/BioKids_Swift/Base.lproj/Main.storyboard
+++ b/BioKids_Swift/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nSO-Xp-irl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nSO-Xp-irl">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -2374,18 +2374,18 @@
         <image name="visible" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="wen-ed-3h7"/>
+        <segue reference="iRe-WJ-2T3"/>
         <segue reference="TSv-Yv-Y2L"/>
         <segue reference="xEE-H4-4Bt"/>
-        <segue reference="H9a-A8-dRd"/>
-        <segue reference="ifK-c6-FJt"/>
+        <segue reference="QSM-nS-LJt"/>
+        <segue reference="Hr4-wp-J15"/>
         <segue reference="gUt-cu-0o1"/>
-        <segue reference="SXJ-Pt-SPE"/>
-        <segue reference="Gga-4K-hsC"/>
-        <segue reference="Kxy-JS-7hi"/>
-        <segue reference="THH-Gk-puL"/>
-        <segue reference="iUN-u4-fQh"/>
-        <segue reference="pdi-Fx-Taa"/>
+        <segue reference="I80-p6-4Kt"/>
+        <segue reference="P9R-dw-xzB"/>
+        <segue reference="bTG-ob-7cF"/>
+        <segue reference="GZF-ol-zgk"/>
+        <segue reference="R1p-Re-bYy"/>
+        <segue reference="cfi-3j-ESE"/>
         <segue reference="fGi-ng-nwX"/>
     </inferredMetricsTieBreakers>
 </document>
